[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["Sara Zwairi <sara.zwairi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.4"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
